# RPS_final

./: .gitignore  LAUNCH_SETUP.md  PLATFORM_WALLET_SETUP.md  README.md  TECHNICAL_SOL_FLOW.md  TEST_PLATFORM_FEES.md  service-wallet.json
anchor/: Anchor.toml  README.md  package.json
anchor/programs/rps-game/: Cargo.toml
anchor/programs/rps-game/src/: lib.rs  lib_backup.rs
anchor/tests/: anchor.ts  test-devnet.js  test-localnet.js  test-magicblock.js
backend/: .gitignore
backend/src/game/: gameManager.js
backend/src/services/: autoFinalizationService.js
backend/src/socket/: socketHandlers.js
backend/src/utils/: simpleMove.js
backend/test/: websocket.test.js
src/game/: gameLogic.js
web/: next.config.mjs  package-lock.json  package.json  render.yaml  server.js
web/app/: globals.css  layout.tsx  page.tsx  page.tsx.bak
web/app/api/games/stats/: route.ts
web/app/game/[gameId]/: page.tsx
web/components/: background-music.tsx  deposit-sol-dialog.tsx  styled-wallet-button.tsx  winnings-history.tsx
web/hooks/: use-anchor-program.ts  use-game.ts  use-referral.ts  use-simple-move.ts  use-socket.ts  use-winnings.ts
web/src/game/: gameLogic.js
