[package]
name = "rps_game"
version = "0.1.0"
description = "Rock Paper Scissors game with MagicBlock ephemeral rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rps_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
ephemeral = ["ephemeral-rollups-sdk"]

[dependencies]
anchor-lang = "0.31.1"
ephemeral-rollups-sdk = { version = "0.2.6", optional = true }

